# esp_test_status_report

./: CMakeLists.txt  README.md
examples/device/status_report_example/: CMakeLists.txt  sdkconfig.defaults
examples/device/status_report_example/main/: main.c
examples/host/: status_receiver.py
include/: status_report_public.h  test_status_report.h
include_private/: status_report_private.h  test_status_report_private.h
src/: status_report.c
